# openshift-must-gather-analyzer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASE.md  build-dist  build-frontend.sh  build-release-artifacts  build.rs
.Bob/: ARCHITECTURE.md  DEVELOPMENT_WORKFLOWS.md  FRONTEND_UI_GUIDE.md  MUST_GATHER_PARSING.md  README.md  TROUBLESHOOTING.md
docs/: FRONTEND_TRIAGE_IMPLEMENTATION.md  TRIAGE_REORGANIZATION_PLAN.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
releases/1.0.0/: SHA256SUMS
releases/1.0.1/: SHA256SUMS
releases/1.0.2/: SHA256SUMS
src/: html.rs  html_v2.rs  main.rs  manifest.rs  mustgather.rs
src/analyzers/: machine_analyzer.rs  mod.rs  networking_analyzer.rs  node_analyzer.rs  operator_analyzer.rs  pod_analyzer.rs  storage_analyzer.rs  tests.rs  types.rs  workload_analyzer.rs
src/files/: index_style.css
src/html-designer/: html-designer.rs
src/resources/: baremetalhost.rs  certificatesigningrequest.rs  clusterautoscaler.rs  clusteroperator.rs  clusterrole.rs  clusterrolebinding.rs  configmap.rs  controlplanemachineset.rs  cronjob.rs  daemonset.rs  deployment.rs  endpoints.rs  event.rs  generic.rs  ingresscontroller.rs  job.rs  machine.rs  machineautoscaler.rs  machineconfig.rs  machineconfigpool.rs  machineconfiguration.rs  machinehealthcheck.rs  machineset.rs  mod.rs  namespace.rs  node.rs  pod.rs  (+12 more)
templates/: index_original.html
testdata/: ip-10-0-0-1.control.plane.no-managed-fields.yaml  truncated-log-file.txt
(+35 files in other folders)
