[package]
name = "mga"
version = "1.0.2"
edition = "2024"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/fumbles/openshift-must-gather-analyzer"
description = "A tool for inspecting OpenShift must-gather records"
keywords = ["openshift"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0.100"
html-builder = "0.3"
yaml-rust = { version = "0.8", package = "yaml-rust2" }
tar = "0.4.44"
tempfile = "3.20"
flate2 = "1.1"
infer = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"

[dependencies.uuid]
version = "1.18"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[dev-dependencies]
notify = "8.2"
tokio = { version = "1.48", features = ["full"] }
warp = { version = "0.4", features = ["server"] }
futures-util = "0.3"
futures-channel = "0.3"
tokio-stream = { version = "0.1.17", features = ["net"] }

[[example]]
name = "html-designer"
path = "src/html-designer/html-designer.rs"
